oxiplate-derive/tests/broken/strings/multi-byte-char-at-end-of-unended-if.rs
use oxiplate_derive::Oxiplate;

#[derive(Oxiplate)]
#[oxiplate_inline(r#"{% if true %}â¯"#)]
struct Data;

fn main() {
    print!("{}", Data);
}
